--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://subliminarte-graphic.vercel.app/logo.svg"
+      content="https://subliminarte-graphic.vercel.app/LogoOp.png"
     />
     <meta property="og:title" content="Subliminarte Graphic" />
     <meta
